# Trident---IndiaRuns

./: .gitignore  submission_metadata.yaml
sandbox/: Dockerfile  requirements.txt
sandbox/data/: metadata.json
sandbox/trident/: README.md  idea.md  pyproject.toml  rank.py
sandbox/trident/app/: main.py
sandbox/trident/app/api/v1/: rank.py
sandbox/trident/app/core/: config.py  logging.py
sandbox/trident/app/domain/: models.py  pipeline.py
sandbox/trident/app/domain/experts/: base.py  behavioral.py  career.py
sandbox/trident/app/domain/gate/: base.py  fixed_weight_gate.py  learned_gate.py
sandbox/trident/app/domain/rerank/: mmr.py
sandbox/trident/app/infra/: embeddings.py  persistence.py
sandbox/trident/tests/fixtures/: sample_data.py
sandbox/trident/tests/unit/: test_behavioral_expert.py  test_explainer.py  test_gate.py
trident/: Dockerfile  build_index.py  generate_submission.py  submission_metadata.yaml
trident/app/api/v1/: schemas.py
trident/app/domain/experts/: semantic.py
trident/app/domain/explanation/: explainer.py
trident/app/domain/rerank/: cross_encoder.py
trident/app/domain/retrieval/: vector_index.py
trident/data/: metadata.json  test_subset.jsonl
trident/tests/integration/: test_pipeline.py
trident/tests/unit/: test_career_expert.py  test_mmr.py  test_semantic_expert.py
